tests/suite/manifests/access-policy/gateway-allow-route-allow-policies.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: AccessPolicy
metadata:
  name: gateway-allow-net1
spec:
  action: Allow
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  rules:
  - name: test-net-1
    source:
      type: IPAddress
      ipAddress:
        address: "192.0.2.0/24"
---
apiVersion: gateway.nginx.org/v1alpha1
kind: AccessPolicy
metadata:
  name: coffee-allow-net2
spec:
  action: Allow
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  rules:
  - name: test-net-2
    source:
      type: IPAddress
      ipAddress:
        address: "198.51.100.0/24"
