tests/suite/manifests/access-policy/multiple-deny-policies.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: AccessPolicy
metadata:
  name: deny-host
spec:
  action: Deny
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  rules:
  - name: test-net-3-host
    source:
      type: IPAddress
      ipAddress:
        address: "203.0.113.10"
---
apiVersion: gateway.nginx.org/v1alpha1
kind: AccessPolicy
metadata:
  name: deny-range
spec:
  action: Deny
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: coffee
  rules:
  - name: test-net-3-range
    source:
      type: IPAddress
      ipAddress:
        address: "203.0.113.0/24"
